<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titleViewBackGround">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="50dp"
                android:text="@string/movie_title_line"
                android:textColor="@color/titleTextColor"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="160dp"
                android:layout_height="234dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/m1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_text_margin_text"
                    android:layout_marginTop="16dp"
                    android:text="@string/movie_release_year"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/movie_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_text_margin_text"
                    android:layout_marginTop="10dp"
                    android:text="@string/movie_length"
                    android:textSize="22sp"
                    android:textStyle="italic" />

                <RatingBar
                    android:id="@+id/movie_vote_average"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_text_margin_text"
                    android:layout_marginTop="10dp"
                    android:isIndicator="true"
                    android:numStars="5" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/detail_text_margin_text"
                    android:layout_marginTop="10dp"
                    android:background="@color/buttonColor"
                    android:padding="8dp"
                    android:text="@string/button_text" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/review_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/movie_detail"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/movie_trailer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/movie_trailer"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/movie_trailer_listing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </LinearLayout>
</ScrollView>